Fix border gap on organization's photos

--- a/css/main.css
+++ b/css/main.css
@@ -388,7 +388,6 @@ header a:hover{
 .organization .details .photo img {
   border: 4px solid rgba(0, 50, 100, 0.75);
   border-radius: 100%;
-  object-fit: scale-down;
   width: 100%;
   height: 100%;
 }
